[gd_scene load_steps=7 format=3 uid="uid://b6asbnubjj7m6"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_508lk"]
[ext_resource type="FontFile" uid="uid://csahcrsc4eshy" path="res://Fonts/crypt-of-tomorrow-ut-font-no-rus.ttf" id="1_lm0pb"]
[ext_resource type="Texture2D" uid="uid://2t60pm2uwooj" path="res://Sprites/newton.png" id="2_gjq1q"]
[ext_resource type="FontFile" uid="uid://0ni3xtjq5btw" path="res://Fonts/Mars_Needs_Cunnilingus.ttf" id="2_sqonb"]
[ext_resource type="Script" path="res://Scripts/led_marquee_sign.gd" id="5_qeepf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ck7f8"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MainMenu" type="Node2D"]
texture_filter = 1
script = ExtResource("1_508lk")

[node name="NewtonSprite" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.196078)
position = Vector2(850, 346)
scale = Vector2(1.00667, 1.00667)
texture = ExtResource("2_gjq1q")

[node name="Title" type="Label" parent="."]
texture_filter = 1
offset_left = 64.0
offset_top = 72.0
offset_right = 224.0
offset_bottom = 120.0
theme_override_fonts/font = ExtResource("1_lm0pb")
theme_override_font_sizes/font_size = 40
text = "PHYSICS
QUIZ"
vertical_alignment = 1

[node name="Chapters" type="Node2D" parent="."]

[node name="HorizontalContainer" type="HBoxContainer" parent="Chapters"]
offset_left = 64.0
offset_top = 216.0
offset_right = 568.0
offset_bottom = 584.0
theme_override_constants/separation = 33
metadata/_edit_group_ = true

[node name="VerticalContainer1" type="VBoxContainer" parent="Chapters/HorizontalContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Chapter1" type="Button" parent="Chapters/HorizontalContainer/VerticalContainer1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 40
text = "Chapter 1"
flat = true
alignment = 0

[node name="Chapter2" type="Button" parent="Chapters/HorizontalContainer/VerticalContainer1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 40
text = "Chapter 2"
flat = true
alignment = 0

[node name="Chapter3" type="Button" parent="Chapters/HorizontalContainer/VerticalContainer1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 40
text = "Chapter 3"
flat = true
alignment = 0

[node name="Chapter4" type="Button" parent="Chapters/HorizontalContainer/VerticalContainer1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 40
text = "Chapter 4"
flat = true
alignment = 0

[node name="Chapter5" type="Button" parent="Chapters/HorizontalContainer/VerticalContainer1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 40
text = "Chapter 5"
flat = true
alignment = 0

[node name="Chapter6" type="Button" parent="Chapters/HorizontalContainer/VerticalContainer1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 40
text = "Chapter 6"
flat = true
alignment = 0

[node name="VerticalContainer2" type="VBoxContainer" parent="Chapters/HorizontalContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Chapter7" type="Button" parent="Chapters/HorizontalContainer/VerticalContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 40
text = "Chapter 7"
flat = true
alignment = 0

[node name="Chapter8" type="Button" parent="Chapters/HorizontalContainer/VerticalContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 40
text = "Chapter 8"
flat = true
alignment = 0

[node name="Chapter9" type="Button" parent="Chapters/HorizontalContainer/VerticalContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 40
text = "Chapter 9"
flat = true
alignment = 0

[node name="Chapter10" type="Button" parent="Chapters/HorizontalContainer/VerticalContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 40
text = "Chapter 10"
flat = true
alignment = 0

[node name="Chapter11" type="Button" parent="Chapters/HorizontalContainer/VerticalContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 40
text = "Chapter 11"
flat = true
alignment = 0

[node name="Preview" type="Button" parent="Chapters/HorizontalContainer/VerticalContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 40
text = "Preview"
flat = true
alignment = 0

[node name="AllChapters" type="Button" parent="."]
offset_left = 616.0
offset_top = 344.0
offset_right = 1134.0
offset_bottom = 423.0
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 70
text = "ALL Chapters"
flat = true

[node name="Exit" type="Button" parent="."]
offset_left = 824.0
offset_top = 592.0
offset_right = 932.0
offset_bottom = 640.0
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 40
text = "EXIT"
flat = true

[node name="Star" type="Node2D" parent="."]
position = Vector2(648, 592)

[node name="StarChars" type="HBoxContainer" parent="Star"]
modulate = Color(0.87451, 0.87451, 0.87451, 1)
offset_left = 6.0
offset_top = 4.0
offset_right = 106.0
offset_bottom = 44.0
theme_override_constants/separation = 0
script = ExtResource("5_qeepf")
metadata/_edit_group_ = true

[node name="S" type="Label" parent="Star/StarChars"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 40
text = "S"

[node name="T" type="Label" parent="Star/StarChars"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 40
text = "T"

[node name="A" type="Label" parent="Star/StarChars"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 40
text = "A"

[node name="R" type="Label" parent="Star/StarChars"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 40
text = "R
"

[node name="Button" type="Button" parent="Star"]
offset_right = 112.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("2_sqonb")
theme_override_font_sizes/font_size = 40
flat = true

[node name="RandomizeOption" type="Node2D" parent="."]
position = Vector2(984, 608)
scale = Vector2(1.3, 1.3)
metadata/_edit_group_ = true

[node name="Description" type="Label" parent="RandomizeOption"]
offset_left = -9.39369e-05
offset_top = -4.69501e-05
offset_right = 132.0
offset_bottom = 24.0
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_fonts/font = ExtResource("1_lm0pb")
theme_override_font_sizes/font_size = 20
text = "Random:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="RandomizeOption"]
offset_left = 93.8461
offset_top = -6.1539
offset_right = 117.846
offset_bottom = 17.8461
theme_override_styles/panel = SubResource("StyleBoxFlat_ck7f8")

[node name="CheckBox" type="CheckBox" parent="RandomizeOption/Panel"]
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
icon_alignment = 1
expand_icon = true

[node name="Credits" type="Label" parent="."]
offset_left = 64.0
offset_top = 624.0
offset_right = 516.0
offset_bottom = 648.0
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_fonts/font = ExtResource("1_lm0pb")
theme_override_font_sizes/font_size = 20
text = "By Benjamin Thio (2024)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[connection signal="pressed" from="Chapters/HorizontalContainer/VerticalContainer2/Preview" to="." method="preview"]
[connection signal="pressed" from="Exit" to="." method="exit"]
[connection signal="pressed" from="Star/Button" to="." method="provide_quizzes_on_chapter" binds= [-1]]
[connection signal="toggled" from="RandomizeOption/Panel/CheckBox" to="." method="_on_randomize_option_check_box_toggled"]
